--- a/ngnix/ngnix.conf
+++ b/ngnix/ngnix.conf
@@ -3,10 +3,22 @@ server {
     server_name localhost;
 
     location / {
-      proxy_pass http://dc_unicon_prod:80;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        # Forward requests to the React app served by Nginx in the hizmetlar_unicon_prod container
+        proxy_pass http://frontend_prod:80;
+
+        # Set proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # Disable proxy redirects
+        proxy_redirect off;
+
+        # Allow large file uploads (if needed)
+        client_max_body_size 100M;
+
+        # Handle connection timeouts
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
     }
 }
