--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Stage 1: Build React app
-FROM node:21-alpine3.19 as builder
+FROM node:20-alpine as builder
 
 # Update and install yarn
 RUN apk update && apk add --no-cache npm
