bugs fixed for docker

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,35 +1,30 @@
 # Stage 1: Build React app
-FROM node:20-alpine as builder
-
-# Update and install yarn
-RUN apk update && apk add --no-cache npm
+FROM node:20-alpine AS builder
 
 # Set the working directory
 WORKDIR /frontend
 
-# Copy the rest of the application source code
-COPY . .
-
 # Install dependencies
-RUN npm install -g npm@11.3.0
+COPY package*.json ./
 RUN npm install --force
 
-# Build the React app
-RUN NODE_OPTIONS=--max_old_space_size=4096 npm run build
+# Copy app source
+COPY . .
 
-# Stage 2: Serve the React app using Nginx
+# Build app
+RUN npm run build
+
+# Stage 2: Serve with Nginx
 FROM nginx:1.23.1-alpine
 
-# Copy the built React app from the builder stage
-COPY --from=builder /frontend/build /usr/share/nginx/html
+# Copy build output to Nginx html folder
+COPY --from=builder /frontend/dist /usr/share/nginx/html
 
-# Copy the Nginx config file from the builder stage
-COPY --from=builder /frontend/nginx/default.conf /etc/nginx/conf.d/default.conf
+# Copy custom Nginx config
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /frontend /frontend
-
-# Expose the port Nginx is running on
+# Expose port
 EXPOSE 80
 
-# Command to run Nginx
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
