--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
+    "i18next": "^25.2.1",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
