--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -24,7 +24,7 @@ COPY --from=builder /frontend/dist /usr/share/nginx/html
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 80
+# EXPOSE 80
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
